components/build/tekton-results/patch-postgres-redhat-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tekton-results-postgres
  namespace: tekton-pipelines
spec:
  template:
    spec:
      volumes:
        - name: start-script
          configMap:
            name: tekton-results-db-start-script
      containers:
        - env:
            - name: POSTGRESQL_USER
              valueFrom:
                secretKeyRef:
                  key: POSTGRES_USER
                  name: tekton-results-postgres
            - name: POSTGRESQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: POSTGRES_PASSWORD
                  name: tekton-results-postgres
            - name: POSTGRESQL_DATABASE
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_DB
                  name: tekton-results-postgres
          envFrom: null
          image: registry.redhat.io/rhel8/postgresql-13@sha256:18316d63fb9d8c75a959ec71521cd3b37e9b2ea3f064a4b4067a7fedc1daf5d9
          name: postgres
          volumeMounts:
            - name: start-script
              subPath: init-db.sh
              mountPath: /usr/share/container-scripts/postgresql/start/init-db.sh
